feat: add archive token route and functionality
